--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>TNW</title>
   </head>
   <body>
-    <header class="main-header">
+    <nav class="main-header">
       <div class="header-left">
         <a href="">News</a>
         <a href="" data-behavior="dropdown">
@@ -39,7 +39,30 @@
         <a href=""></a>
         <a href=""></a>
       </div>
+    </nav>
+    <nav class="secondary-nav"></nav>
+    <nav class="nav-message"></nav>
+
+    <header>
+      <div class="col-two-thirds"></div>
+      <div class="col-one-third row-one-half"></div>
+      <div class="col-one-third row-one-half"></div>
     </header>
-    <header class="secondary-header"></header>
+
+    <main>
+      <section>
+        <h2>Latest News</h2>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </section>
+      <section></section>
+      <section></section>
+    </main>
   </body>
 </html>
