--- a/src/index.html
+++ b/src/index.html
@@ -31,23 +31,25 @@
       <div class="nav-left">
         <a href="">News</a>
         <div class="dropdown">
-          <button class="dropbtn">
+          <a class="dropbtn">
             Events
             <i class="fas fa-caret-down"></i>
-          </button>
-          <ul class="dropdown-content">
-            <li class="dropdown-item"><a>Hard Fork Summit</a></li>
-            <li class="dropdown-item"><a>TNW2020</a></li>
-          </ul>
+          </a>
+          <div class="dropdown-content">
+            <a class="dropdown-item">Hard Fork Summit</a>
+            <a class="dropdown-item">TNW2020</a>
+          </div>
         </div>
-        <a href="" data-behavior="dropdown">
-          Business
-          <i class="fas fa-caret-down"></i>
-          <ul class="dropdown-content">
-            <li class="dropdown-item"><a>Index</a></li>
-            <li class="dropdown-item"><a>TNWX</a></li>
-          </ul>
-        </a>
+        <div class="dropdown">
+          <a class="dropbtn">
+            Business
+            <i class="fas fa-caret-down"></i>
+          </a>
+          <div class="dropdown-content">
+            <a class="dropdown-item">Index</a>
+            <a class="dropdown-item">TNWX</a>
+          </div>
+        </div>
         <a href="">AMAs</a>
         <a href="">Spaces</a>
         <a href="">Terms & Conditions</a>
@@ -60,19 +62,21 @@
         <a href="">Contact</a>
       </div>
     </nav>
-    <nav class="nav">
+    <nav class="primary-nav">
       <a href="">Latest</a>
       <a href="">Hard Fork</a>
       <a href="">Plugged</a>
       <a href="">Work 2030</a>
 
-      <i class="fas fa-search fa-flip-horizontal"></i>
-      <p class="nav-message">
-        How will blockchain impact fintech and business? Join Hard Fork Summit
-        to find out
-        <i class="fas fa-long-arrow-alt-right"></i>
-      </p>
+      <span class="search">
+        <i class="fas fa-search fa-flip-horizontal"></i>
+      </span>
     </nav>
+    <!-- <p class="nav-message"> -->
+    <!--   How will blockchain impact fintech and business? Join Hard Fork Summit to -->
+    <!--   find out -->
+    <!--   <i class="fas fa-long-arrow-alt-right"></i> -->
+    <!-- </p> -->
 
     <header class="grid">
       <div class=""></div>
