design coming together

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Use google fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
-
     <!-- import font awesome -->
     <script
       src="https://kit.fontawesome.com/35f34fbec9.js"
@@ -72,16 +71,19 @@
         <i class="fas fa-search fa-flip-horizontal"></i>
       </span>
     </nav>
-    <!-- <p class="nav-message"> -->
-    <!--   How will blockchain impact fintech and business? Join Hard Fork Summit to -->
-    <!--   find out -->
-    <!--   <i class="fas fa-long-arrow-alt-right"></i> -->
-    <!-- </p> -->
 
-    <header class="grid">
-      <div class=""></div>
-      <div class=""></div>
-      <div class=""></div>
+    <a class="nav-message">
+      How will blockchain impact fintech and business? Join Hard Fork Summit to
+      find out
+      <span class="arrow">
+        <i class="fas fa-long-arrow-alt-right"></i>
+      </span>
+    </a>
+
+    <header class="picture">
+      <div class="col-two-thirds"></div>
+      <div class="col-one-third row-one-half"></div>
+      <div class="col-one-third row-one-half"></div>
     </header>
 
     <main>
