--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
       <a href="">Latest</a>
       <a href="">Hard Fork</a>
       <a href="">Plugged</a>
+      <a href="">Fundamentals</a>
       <a href="">Work 2030</a>
 
       <span class="search">
@@ -81,9 +82,9 @@
     </a>
 
     <header class="picture">
-      <div class="col-two-thirds"></div>
-      <div class="col-one-third row-one-half"></div>
-      <div class="col-one-third row-one-half"></div>
+      <div class="col-two-thirds picture-one"></div>
+      <!-- <div class="col-one-third row-one-half"></div> -->
+      <!-- <div class="col-one-third row-one-half"></div> -->
     </header>
 
     <main>
