adding responsiveness, this could be a long project, gonna skip ahead

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
+
     <!-- import font awesome -->
     <script
       src="https://kit.fontawesome.com/35f34fbec9.js"
@@ -74,17 +75,45 @@
     </nav>
 
     <a class="nav-message">
-      How will blockchain impact fintech and business? Join Hard Fork Summit to
-      find out
+      In less than three weeks, Hard Fork Summit is taking over Amsterdam. Don't
+      miss it
       <span class="arrow">
         <i class="fas fa-long-arrow-alt-right"></i>
       </span>
     </a>
 
-    <header class="picture">
-      <div class="col-two-thirds picture-one"></div>
-      <!-- <div class="col-one-third row-one-half"></div> -->
-      <!-- <div class="col-one-third row-one-half"></div> -->
+    <header class="header-pictures">
+      <div class="picture-one">
+        <div class="gradient"></div>
+        <h1 class="picture-one-h1">TNW</h1>
+        <span class="date">Wednesday - September 25, 2019</span>
+        <div class="description">
+          <span class="title">DISTRACT</span>
+          <h2>Ubisoft's new college course is a game about making games</h2>
+          <span class="credit">by Rachel Kaser</span>
+        </div>
+      </div>
+      <div class="secondary-pictures">
+        <div class="picture-two">
+          <div class="gradient"></div>
+          <div class="description">
+            <span class="title">GEAR</span>
+            <h2>The 2020 iPhone might look a lot more like the iPhone 4</h2>
+            <span class="credit">by Napier Lopez</span>
+          </div>
+        </div>
+        <div class="picture-three">
+          <div class="gradient"></div>
+          <div class="description">
+            <span class="title">INSIGHTS</span>
+            <h2>
+              Vodafone litters London with blockchain tokens in new augmented
+              reality game
+            </h2>
+            <span class="credit">by David Canellis</span>
+          </div>
+        </div>
+      </div>
     </header>
 
     <main>
